# pytest-github-actions-annotate-failures

./: .flake8  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  README.md  plugin_test.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_hoge.py  tox.ini  tox.toml
.github/: dependabot.yml  release-drafter.yml
.github/workflows/: deploy.yml  format.yml  test.yml
pytest_github_actions_annotate_failures/: plugin.py
